--- a/styles/tooltips.less
+++ b/styles/tooltips.less
@@ -22,7 +22,7 @@
     font-size: max(1em, @ui-size*.85);
     padding: .1em .4em;
     margin: 0 @ui-padding*-.35 0 @ui-padding*.25;
-    border-radius: max(2px, @component-border-radius / 2);
+    border-radius: @component-border-radius;
     color: @tooltip-text-key-color;
     background: @tooltip-background-key-color;
   }
