--- a/styles/editor.less
+++ b/styles/editor.less
@@ -38,3 +38,14 @@ atom-text-editor[mini] {
     }
   }
 }
+
+atom-text-editor,
+atom-text-editor::shadow {
+  .line.cursor-line {
+    background-color: @syntax-gutter-background-color-selected;
+  }
+
+  .line-number.cursor-line {
+    background-color: transparent;
+  }
+}
