--- a/styles/settings.less
+++ b/styles/settings.less
@@ -22,9 +22,9 @@
 		position: relative;
 		min-width: @ui-size * 15;
 		max-width: @ui-size * 20;
-		border-width: 0 1px 0 0;
+		border-width: 0;
 		border-image: linear-gradient(@level-2-color 10px, @base-border-color 200px) 0 1 0 0 stretch;
-		background: @level-2-color;
+		background: @level-3-color;
 
 		.btn {
 			white-space: initial;
