--- a/styles/tree-view.less
+++ b/styles/tree-view.less
@@ -1,11 +1,11 @@
-@tree-view-height: @ui-padding*1.5;
+@tree-view-height: @ui-padding * 1.382em;
 
 .tree-view {
   font-size: @ui-size;
   background: @tree-view-background-color;
 
   .project-root.project-root {
-    padding-top: @ui-padding/2;
+    // padding-top: @ui-padding / 2em;
     &:before {
       height: @ui-tab-height;
       border-top: 1px solid transparent;
