--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -1,29 +1,61 @@
+/* jonikorpi UI variables (all imported syntax variables)
+** ------------------------------------------------------ */
+// // General colors
+// @syntax-text-color: @base0;
+// @syntax-cursor-color: @magenta;
+// @syntax-selection-color: @base00;
+// @syntax-background-color: @base03;
+//
+// // Guide colors
+// @syntax-wrap-guide-color: @base02;
+// @syntax-indent-guide-color: @base02;
+// @syntax-invisible-character-color: @base02;
+//
+// // For find and replace markers
+// @syntax-result-marker-color: @yellow;
+// @syntax-result-marker-color-selected: @base3;
+//
+// // Gutter colors
+// @syntax-gutter-text-color: @base01;
+// @syntax-gutter-text-color-selected: @base01;
+// @syntax-gutter-background-color: @syntax-background-color;
+// @syntax-gutter-background-color-selected: @base04;
+//
+// // For git diff info. i.e. in the gutter
+// @syntax-color-renamed: @blue;
+// @syntax-color-added: @green;
+// @syntax-color-modified: @orange;
+// @syntax-color-removed: @red;
+
 
 /* ONE dark UI variables
 ** ---------------------------------------------- */
 
 @import "syntax-variables";
-.ui-syntax-color() { @syntax-background-color: hsl(220,24%,20%); } .ui-syntax-color(); // fallback color
 @ui-syntax-color: @syntax-background-color;
+@ui-alt-syntax-color: @syntax-text-color;
 
 // Color guards -----------------
-@ui-hue: hue(@ui-syntax-color);
+@ui-hue:     hue(@ui-syntax-color);
+@ui-alt-hue: hue(@ui-alt-syntax-color);
 
-@ui-s-s: saturation(@ui-syntax-color);
-.ui-saturation() when (@ui-hue <=  80) { @ui-saturation: min(@ui-s-s,  6%); } // minimize saturation for brown
+@ui-s-s:     saturation(@ui-syntax-color);
+@ui-alt-s-s: saturation(@ui-alt-syntax-color);
+.ui-saturation() when (@ui-hue <=  80) { @ui-saturation: min(@ui-s-s,  14.6%); } // minimize saturation for brown
 .ui-saturation() when (@ui-hue >   80)
-                  and (@ui-hue <  160) { @ui-saturation: min(@ui-s-s, 12%); } // reduce saturation for green
-.ui-saturation() when (@ui-hue >= 160) { @ui-saturation: min(@ui-s-s, 24%); } // limit max saturaiotn for the rest
+                  and (@ui-hue <  160) { @ui-saturation: min(@ui-s-s, 23.6%); } // reduce saturation for green
+.ui-saturation() when (@ui-hue >= 160) { @ui-saturation: min(@ui-s-s, 38.2%); } // limit max saturaiotn for the rest
 .ui-saturation();
 
 @ui-s-l: lightness(@ui-syntax-color);
+@ui-alt-s-l: lightness(@ui-alt-syntax-color);
 .ui-lightness() when (@ui-s-l <  16%) { @ui-lightness: @ui-s-l + 6%; } // increase lightness when too dark
 .ui-lightness() when (@ui-s-l >= 16%) { @ui-lightness: min(@ui-s-l, 22%); } // limit max lightness
 .ui-lightness();
 
 // Main colors -----------------
-@ui-fg: hsl(@ui-hue, min(@ui-saturation, 18%), max(@ui-lightness*3, 66%) );
-@ui-bg: hsl(@ui-hue, @ui-saturation, @ui-lightness); // normalized @syntax-background-color
+// @ui-fg: hsl(@ui-hue, min(@ui-saturation, 18%), max(@ui-lightness*3, 60%) );
+// @ui-bg: hsl(@ui-hue, @ui-saturation, @ui-lightness); // normalized @syntax-background-color
 
 
 
@@ -36,86 +68,103 @@
 
 
 // Text -----------------
-@text-color:            @ui-fg;
-@text-color-subtle:     fadeout(@text-color, 40%);
-@text-color-highlight:  saturate( lighten(@text-color, 20%), 40%);
-@text-color-selected:   white;
+@text-color:            @syntax-text-color;
+@text-color-subtle:     fade(@text-color, 61.8%);
+@text-color-info:    @syntax-color-renamed;
+@text-color-success: @syntax-color-added;
+@text-color-warning: @syntax-color-modified;
+@text-color-error:   @syntax-color-removed;
 
-@text-color-info:    hsl(219,  79%, 66%);
-@text-color-success: hsl(140,  44%, 62%);
-@text-color-warning: hsl( 36,  60%, 72%);
-@text-color-error:   hsl(  9, 100%, 64%);
+// Light or dark colors -----------------
+
+// .choose-colors-according-to-bg-lightness() when (@ui-s-l <= 50%) {
+  // Dark bg colors
+  @text-color-highlight: lighten(@text-color, 14.6%);
+  @text-color-selected:  lighten(@text-color, 23.6%);
+  @base-highlight-color: lighten(@base-background-color, 3.4%);
+  @base-offset-color:    lighten(@base-background-color, 2.1%);
+  @base-border-color:    lighten(@base-background-color, 5.6%);
+// }
+
+// .choose-colors-according-to-bg-lightness() when (@ui-s-l > 50%) {
+//   // Light bg colors
+//   @text-color-highlight: darken(@text-color, 23.6%);
+//   @text-color-selected:  darken(@text-color, 38.2%);
+//   @base-highlight-color: darken(@base-background-color, 5.6%);
+//   @base-offset-color:    darken(@base-background-color, 9%);
+//   @base-border-color:    darken(@base-background-color, 9%);
+// }
+
+// .choose-colors-according-to-bg-lightness();
 
 
 // Background -----------------
-@background-color-info:    hsl(208, 100%, 50%);
-@background-color-success: hsl(160,  70%, 42%);
-@background-color-warning: hsl(32,   60%, 50%);
-@background-color-error:   hsl(0,    70%, 50%);
+@background-color-info:    shade(@syntax-color-renamed, 38.2%);
+@background-color-success: shade(@syntax-color-added, 38.2%);
+@background-color-warning: shade(@syntax-color-modified, 38.2%);
+@background-color-error:   shade(@syntax-color-removed, 38.2%);
 
-@background-color-highlight: lighten(@base-background-color, 4%);
-@background-color-selected:  lighten(@base-background-color, 8%);
+@background-color-highlight: lighten(@base-background-color, 5.6%);
+@background-color-selected:  lighten(@base-background-color, 9%);
 
-@app-background-color: @level-3-color;
+@app-background-color: @syntax-background-color;
 
 
 // Base -----------------
-@base-background-color: @ui-bg;
-@base-border-color:     hsl(@ui-hue, @ui-saturation, @ui-lightness*.7);
+@base-background-color: @syntax-background-color;
+@base-border-thickness: @component-padding * 0.5;
 
 
 // Components -----------------
 @pane-item-background-color:       @base-background-color;
-@pane-item-border-color:           @base-border-color;
+@pane-item-border-color:           @base-highlight-color;
 
-@input-background-color:           hsla(0,0%,0%,.2);
-@input-border-color:               hsla(0,0%,0%,.2);
+@input-background-color:           hsla(0,0%,0%,.146);
+@input-border-color:               hsla(0,0%,0%,.236);
 
-@tool-panel-background-color:      @level-3-color;
-@tool-panel-border-color:          @base-border-color;
+@tool-panel-background-color:      @base-highlight-color;
+@tool-panel-border-color:          @base-highlight-color;
 
-@inset-panel-background-color:     lighten(@level-2-color, 4%);
-@inset-panel-border-color:         fadeout(@base-border-color, 15%);
+@inset-panel-background-color:     @base-offset-color;
+@inset-panel-border-color:         @base-border-color;
 
-@panel-heading-background-color:   @level-2-color;
+@panel-heading-background-color:   @base-offset-color;
 @panel-heading-border-color:       @base-border-color;
 
-@overlay-background-color:         @level-2-color;
+@overlay-background-color:         @base-highlight-color;
 @overlay-border-color:             @base-border-color;
 
-@button-background-color:          @level-1-color;
-@button-background-color-hover:    lighten(@button-background-color, 2%);
+@button-background-color:          @base-offset-color;
+@button-background-color-hover:    lighten(@button-background-color, 9%);
 @button-background-color-selected: @base-accent-color;
 @button-border-color:              @base-border-color;
 
-@tab-bar-background-color:         @level-3-color;
+@tab-bar-background-color:         @base-highlight-color;
 @tab-bar-border-color:             @base-border-color;
-@tab-background-color:             @level-3-color;
-@tab-background-color-active:      @level-2-color;
-@tab-border-color:                 @base-border-color;
+@tab-background-color:             @tab-bar-background-color;
+@tab-background-color-active:      @base-background-color;
+@tab-border-color:                 transparent;
 
-@tree-view-background-color:       @level-3-color;
+@tree-view-background-color:       @base-background-color;
 @tree-view-border-color:           @base-border-color;
 
-@ui-site-color-1: hsl(208, 100%, 50%); // green
-@ui-site-color-2: hsl(160,  70%, 42%); // blue
-@ui-site-color-3: hsl(32,   60%, 50%); // orange
-@ui-site-color-4: #D831B0;             // pink
-@ui-site-color-5: #EBDD5B;             // yellow
+@ui-site-color-1: @background-color-success;
+@ui-site-color-2: @background-color-info;
+@ui-site-color-3: @background-color-selected;
+@ui-site-color-4: @background-color-error;
+@ui-site-color-5: @background-color-warning;
 
 
 // Sizes -----------------
-@font-size:               11px;
-@input-font-size:         14px;
-@disclosure-arrow-size:   12px;
+@font-size:               .8125em;
+@input-font-size:         1em;
+@disclosure-arrow-size:   @font-size;
 
-@component-padding:       10px;
-@component-icon-padding:  5px;
-@component-icon-size:     16px; // needs to stay 16px to look sharpest
-@component-line-height:   25px;
-@component-border-radius: 3px;
-
-@tab-height:              30px;
+@component-padding:       @font-size*1.618;
+@component-icon-padding:  @component-padding/5;
+@component-icon-size:     1em; // needs to stay 16px to look sharpest
+@component-line-height:   @font-size*2.618;
+@component-border-radius: 5px;
 
 
 // Font -----------------
@@ -130,7 +179,7 @@
 ** ---------------------------------------------- */
 
 // Text (Custom) -----------------
-@text-color-faded: fade(@text-color, 20%);
+@text-color-faded: @text-color-subtle;
 
 @text-color-added:    @text-color-success;  // green
 @text-color-ignored:  @text-color-subtle;   // faded
@@ -140,45 +189,47 @@
 
 
 // Background (Custom) -----------------
-@level-1-color: lighten(@base-background-color, 6%);
-@level-2-color: @base-background-color;
-@level-3-color: darken(@base-background-color, 3%);
+@level-1-color: @base-background-color;
+@level-2-color: @base-highlight-color;
+@level-3-color: @base-offset-color;
 
 
 // Base -----------------
-@base-accent-color: hsl(@ui-hue, @ui-saturation + 70%, @ui-lightness + 40%);
+@base-accent-color: mix(@text-color-info, @base-background-color, 50%);
 
 
 // Components (Custom) -----------------
-@badge-background-color:           lighten(@background-color-highlight, 6%);
+@badge-background-color:           lighten(@background-color-highlight, 5.6%);
 
-@button-text-color-selected:       contrast(@button-background-color-selected, white, hsl(@ui-hue,100%,10%), 40% );
+@button-text-color-selected:       @text-color-selected;
 @button-border-color-selected:     @base-border-color;
 
-@checkbox-background-color:        fade(@base-accent-color, 33%);
+@checkbox-background-color:        @base-accent-color;
 
-@input-background-color-focus:     fadein(@input-background-color, 6%);
-@input-selection-color:            darken(@background-color-selected, 6%);
+@input-background-color-focus:     fadein(@input-background-color, 5.6%);
+@input-selection-color:            darken(@background-color-selected, 5.6%);
 @input-selection-color-focus:      @background-color-selected;
 
-@key-binding-border-color:         hsla(0,0%,100%,.1);
-@key-binding-background-color:     hsla(0,0%,100%,.1);
+@key-binding-border-color:         hsla(0,0%,100%,.146);
+@key-binding-background-color:     hsla(0,0%,100%,.146);
 
-@overlay-backdrop-color:           hsla(@ui-hue,@ui-saturation,5%,.5);
+@overlay-backdrop-color:           fade(@level-1-color, 76.4%);
 
 @progress-background-color:        @base-accent-color;
 
 @scrollbar-color:                  @level-1-color;
-@scrollbar-background-color:       @level-3-color; // replaced `transparent` with a solid color to test https://github.com/atom/one-light-ui/issues/4
+@scrollbar-background-color:       @level-2-color;
 
-@tab-text-color:                   @text-color-subtle;
+@tab-text-color:                   @text-color;
 @tab-text-color-active:            @text-color-highlight;
 @tab-text-color-editor:            contrast(@ui-syntax-color, darken(@ui-syntax-color, 50%), @text-color-highlight );
 @tab-icon-color:                   @text-color-subtle;
-@tab-background-color-editor:      @ui-syntax-color;
+@tab-inactive-transparency:        .5;
+@tab-background-color-editor:      @syntax-background-color;
+@tab-text-color-editor:            @text-color-selected;
 
-@tooltip-background-color:         @base-accent-color;
-@tooltip-text-color:               contrast(@tooltip-background-color, white, hsl(@ui-hue,100%,10%), 40% );
+@tooltip-background-color:         @base-border-color;
+@tooltip-text-color:               @text-color-selected;
 @tooltip-text-key-color:           @tooltip-background-color;
 @tooltip-background-key-color:     @tooltip-text-color;
 
@@ -186,14 +237,11 @@
 // Sizes (Custom) -----------------
 
 @ui-size:                 1em;
-@ui-input-size:           @ui-size*1.25;
-@ui-padding:              @ui-size*1.5;
-@ui-padding-icon:         @ui-padding/3.3;
-@ui-line-height:          @ui-size*2;
-@ui-tab-height:           @ui-padding*2;
-
-
-
+@ui-input-size:           1em;
+@ui-padding:              @component-padding;
+@ui-padding-icon:         @component-icon-padding;
+@ui-line-height:          @component-line-height;
+@ui-tab-height:           @component-padding*2.382;
 
 /* Packages variables
 ** These variables are used to override packages
