--- a/styles/tree-view.less
+++ b/styles/tree-view.less
@@ -1,7 +1,7 @@
-@tree-view-height: @ui-padding * 1.382em;
+@tree-view-height: @component-padding*1.236;
 
 .tree-view {
-  font-size: @ui-size;
+  font-size: @font-size;
   background: @tree-view-background-color;
 
   .project-root.project-root {
