--- a/styles/key-binding.less
+++ b/styles/key-binding.less
@@ -4,7 +4,7 @@
   padding: 0 @ui-padding/4;
   line-height: 2;
   font-family: 'Helvetica Neue', Arial, sans-serif;
-  font-size: max(1em, @ui-size*.85);
+  font-size: @ui-size*.85;
   letter-spacing: @ui-size/10;
   border-radius: @component-border-radius;
   border: 1px solid @key-binding-border-color;
