--- a/styles/tooltips.less
+++ b/styles/tooltips.less
@@ -19,7 +19,7 @@
 
   .keystroke {
     font-family: 'Helvetica Neue', Arial, sans-serif;
-    font-size: max(1em, @ui-size*.85);
+    font-size: @ui-size*.85;
     padding: .1em .4em;
     margin: 0 @ui-padding*-.35 0 @ui-padding*.25;
     border-radius: @component-border-radius;
