Removes blinking bracket matchers (too distracting)

--- a/styles/editor.less
+++ b/styles/editor.less
@@ -54,12 +54,6 @@ atom-text-editor::shadow {
     opacity: 1;
     border: solid @text-color-info;
     border-width: 1px 0;
-    background: @background-color-info;
-    transition: all 0.15s linear;
-  }
-
-  .blink-off + .highlights .bracket-matcher .region {
-    border-color: transparent;
-    background: transparent;
+    background: fade(@background-color-info, 61.8%);
   }
 }
